[package]
name = "mini_redis"
version = "0.1.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo-gen = { path = "./volo-gen" }

volo.workspace = true
volo-thrift.workspace = true
pilota.workspace = true

anyhow.workspace = true
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }

tracing = "0.1"
tracing-subscriber = "0.3"
lazy_static = "1"

motore = "0"
http = "0"

async-channel = "*"
axum = { version = "0.6.20" }
reqwest = "0.11"
serde = "1.0.188"

once_cell = "1.18.0"
faststr = "0.2.11"
axum-macros = "0.3.8"

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[workspace]
members = ["volo-gen"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-build = "*"
volo-thrift = "*"
pilota = "*"

anyhow = "1"
async-trait = "0.1"
tokio = "1"
